horizontal scroll bag fixed

--- a/css/font.css
+++ b/css/font.css
@@ -1,18 +1,3 @@
-/*@font-face {
-  font-family: 'LeagueGothic';
-  src: url(../fonts/LeagueGothic-Regular.otf) format("opentype");
-}*/
-
-/*@font-face {
-  font-family: 'Open Sans Light';
-  src: url(../fonts/OpenSans-Light.ttf);
-}*/
-
-/*@font-face {
-  font-family: 'Open Sans Bold';
-  src: url(../fonts/OpenSans-ExtraBold.ttf);
-}*/
-
 @font-face {
     font-family: 'LeagueGothicRegular';
     src: url(../fonts/LeagueGothicRegular.eot);
