--- a/sass/min-768.scss
+++ b/sass/min-768.scss
@@ -82,7 +82,7 @@
   }
   &__text {
     height: auto;
-    max-height: 145px;
+    max-height: 155px;
     overflow: hidden;
   }
 }
